--- a/src/styles.css
+++ b/src/styles.css
@@ -4,13 +4,28 @@
 
 body{
     margin: 0;
+    background-color: lightsalmon;
 }
 
 .calculator-grid{
     display: grid;
+    justify-content: center;
     margin-top: 2em;
     grid-template-columns: repeat(4, 6rem);
     grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
+}
+
+.calculator-grid > button{
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255,255,255,0.75);
+}
+
+.calculator-grid > button:hover,
+.calculator-grid > button:focus{
+    background-color: rgba(255,255,255,1);
 }
 
 .span-2{
@@ -20,4 +35,20 @@ body{
     grid-column: 1 / -1;
     background-color: rgba(0, 0, 0, 0.75);
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    word-wrap: break-word;
+    word-break: break-all;
+
+}
+
+.output .previous-operand{
+    font-size: 1.5rem;
+    color: rgba(255,255,255,1);
+}
+
+.output .current-operand{
+    font-size: 2.5rem;
+    color: rgba(255,255,255,1);
 }
